--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "David Petrov <davidpetrovx@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^12.3.1"
+    "discord.js": "^12.3.1",
+    "line-reader": "^0.4.0"
   }
 }
