--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Bookmebot files
+./BookMeBot/resources/config.json
+./BookMeBot/db/
+./BookMeBot/vm-keys/
